# mini-blog-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  report.xml  requirements.txt
scripts/: README.md  build  codestyle  openapi.py  server  setup  test
scripts/db/: mongodb-dump.py
src/mini_blog_api/: __init__.py  config.py  main.py  middleware.py
src/mini_blog_api/controllers/: auth_controller.py  author_controller.py  card_controller.py  category_controller.py  internal_controller.py  user_controller.py
src/mini_blog_api/models/: auth_model.py  author_model.py  base_model.py  card_model.py  category_model.py  user.py  user_model.py
src/mini_blog_api/repositories/: auth_repository.py  author_repository.py  card_repository.py  category_repository.py  db.py  user_repository.py
src/mini_blog_api/routes/: internal.py
src/mini_blog_api/services/: auth.py  util.py
tests/: conftest.py  dummy_data.py  test_auth_controller.py  test_card_controller.py  test_internal_controller.py  test_internal_route.py
